# utility-deck

./: .gitignore  LICENSE  README.md  extract_pdf.py  gemini_audio_transcriber.py  pyproject.toml
audio_transcriber/: README.md  __init__.py
extract_pdf/: README.md  __init__.py
html_to_image/: __init__.py  html_to_image.py
html_to_pdf/: README.md  __init__.py  html_to_pdf.py
image_to_html/: README.md  __init__.py  image_to_html.py
md_to_pdf/: README.md  __init__.py  md_to_pdf.py
pdf_conv/: generate_client_proposal_pdf.py  generate_pdf.py  generate_proposal_pdf.py  generate_team_proposal_pdf.py
